--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -234,11 +234,11 @@ footer .footer-centering-wrapper {
 
 #search-results {
 
-  .valid-results-wrapper {
-    ul {
-      margin-left: 0px;
-    }
-  }
+//  .valid-results-wrapper {
+//    ul {
+//      margin-left: 0px;
+//    }
+//  }
 
   .pagination-wrapper {
     .centering-wrapper {
