--- a/src/web.public/public/stylesheets/partials/_logos.scss
+++ b/src/web.public/public/stylesheets/partials/_logos.scss
@@ -39,3 +39,10 @@ footer .akin-logo {
     height: 53px;
   }
 }
+
+.logo-for-pinterest {
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: -500px;
+}
