--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -13,12 +13,12 @@
 
 @import "partials/base";
 @import "partials/reset";
+@import "partials/mixins";
 @import "partials/browser";
 @import "partials/typography";
 @import "partials/layout";
 @import "partials/allmighty-autocomplete";
 @import "partials/links";
-@import "partials/input";
 @import "partials/logos";
 @import "partials/items";
 @import "partials/custom-controls";
