More css refactoring

--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -237,7 +237,7 @@ h1 {
 }
 
 .copyright-wrapper p {
-  font-size: 9px;
+  @include tiny-text;
   color: lighten($dark-background-colour, 25);
   text-align: center;
 }
