--- a/src/web.public/public/stylesheets/partials/_mixins.scss
+++ b/src/web.public/public/stylesheets/partials/_mixins.scss
@@ -33,6 +33,18 @@
   line-height: 14px;
 }
 
+@mixin tiny-text {
+  font-size: 9px;
+  line-height: 16px;
+}
+
+@mixin positioned-off-the-page {
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: -500px;
+}
+
 // BOX MODEL
 
 @mixin centred-margins {
