--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -18,6 +18,9 @@ $body-font-family: 400 16px/1.6 'Noto Sans', serif;
 $header-font-family: 400 60px/1.3 'Bree Serif', Georgia, serif;
 $menu-arrow-size: 7px;
 $website-max-width: 1200px;
+$facebook-colour: #3a579b;
+$twitter-colour: #598dca;
+$light-drawing-colour: lighten($control-border-colour, 60);
 
 // ICONS
 
