--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -1,5 +1,5 @@
 p.error,
-p.warning {
+p.info {
   padding: 12px 24px;
   text-align: center;
   line-height: 16pt;
@@ -20,7 +20,7 @@ p.error {
   }
 }
 
-p.warning {
+p.info {
   background: lighten($dark-background-colour, 50);
   color: black;
 
@@ -36,7 +36,7 @@ h1 {
   font-weight: bold;
   display: block;
   border: 0px;
-  border-bottom: 1px solid lighten($control-border-colour, 60);
+  border-bottom: 1px solid $light-drawing-colour;
   background-color: transparent;
   padding: 6px 6px 18px 6px;
   margin-bottom: 12px;
@@ -74,7 +74,7 @@ h1 {
   }
 
   p.error,
-  p.warning {
+  p.info {
     max-width: 550px;
   }
 }
@@ -105,7 +105,7 @@ h1 {
   clear: both;
   margin-bottom: 24px;
   max-width: 550px;
-  border-bottom: 1px solid lighten($control-border-colour, 60);
+  border-bottom: 1px solid $light-drawing-colour;
 
   @include mq($from: mobile-landscape) {
     border-bottom: none;
@@ -137,10 +137,10 @@ h1 {
   ul {
     @include clearfix;
 
-    //border-bottom: 1px solid lighten($control-border-colour, 60);
+    //border-bottom: 1px solid $light-drawing-colour;
     //padding-bottom: 9px;
 
-    //border: 1px solid lighten($control-border-colour, 60);
+    //border: 1px solid $light-drawing-colour;
     //@include border-top-radius(6px);
     //@include border-bottom-radius(6px);
     //padding: 3px;
@@ -199,7 +199,7 @@ h1 {
   margin-bottom: 12px;
   padding-bottom: 12px;
   max-width: 550px;
-  border-bottom: 1px solid lighten($control-border-colour, 60);
+  border-bottom: 1px solid $light-drawing-colour;
 
   @include mq($from: mobile-landscape) {
     border-bottom: none;
@@ -260,12 +260,12 @@ h1 {
 }
 
 .img-border {
-  border: 1px solid lighten($control-border-colour, 60);
+  border: 1px solid $light-drawing-colour;
   padding: 3px;
 }
 
 .control-border {
-  border: 1px solid lighten($control-border-colour, 60);
+  border: 1px solid $light-drawing-colour;
   @include border-top-radius(6px);
   @include border-bottom-radius(6px);
   padding: 3px;
@@ -292,7 +292,7 @@ h1 {
 
   .mobile-download-button {
     clear: both;
-    border-top: 1px solid lighten($control-border-colour, 60);
+    border-top: 1px solid $light-drawing-colour;
     padding-top: 6px;
 
     @include mq($from: mobile-landscape) {
@@ -528,7 +528,7 @@ h1 {
   .description {
     clear: both;
     padding: 18px 6px 0px 6px;
-    border-top: 1px solid lighten($control-border-colour, 60);
+    border-top: 1px solid $light-drawing-colour;
     margin-bottom: 12px;
     max-width: 500px;
 
@@ -549,7 +549,7 @@ h1 {
       width: 100px;
       margin: 12px auto 6px auto;
       text-align: center;
-      border: 1px solid lighten($control-border-colour, 60);
+      border: 1px solid $light-drawing-colour;
       @include border-top-radius(6px);
       @include border-bottom-radius(6px);
     }
