some items refactoring

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -21,6 +21,7 @@ $website-max-width: 1200px;
 $facebook-colour: #3a579b;
 $twitter-colour: #598dca;
 $light-drawing-colour: lighten($control-border-colour, 60);
+$main-heading-colour: black;
 
 // ICONS
 
