--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -1,3 +1,5 @@
+// ERROR AND INFO BOX STYLING
+
 p.error,
 p.info {
   padding: 12px 24px;
@@ -30,9 +32,11 @@ p.info {
   }
 }
 
+// Page title
+
 h1 {
-  font-size: 24px;
-  line-height: 28px;
+  position: relative;
+  @include page-title-text;
   font-weight: bold;
   display: block;
   border: 0px;
@@ -40,25 +44,13 @@ h1 {
   background-color: transparent;
   padding: 6px 6px 18px 6px;
   margin-bottom: 12px;
-  color: black;
-  position: relative;
+  color: $main-heading-colour;
 
   @include mq($from: tablet) {
-    font-size: 32px;
-    line-height: 36px;
+    @include large-page-title-text;
   }
 
-  a, a:link, a:visited, a:hover, a:active {
-    vertical-align: middle;
-    font: $body-font-family;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 20px;
-    color: $alt-black-colour;
-    display: inline-block;
-    //padding: 3px 12px;
-    padding-left: 12px;
-    padding-right: 12px;
+  .basic-button {
     position: absolute;
     right: 0px;
   }
@@ -76,6 +68,16 @@ h1 {
   p.error,
   p.info {
     max-width: 550px;
+  }
+
+  .disabled {
+    a, p, h4, em {
+      color: $disabled-text-colour!important;
+    }
+
+    img {
+      opacity: 0.4;
+    }
   }
 }
 
@@ -130,28 +132,12 @@ h1 {
     vertical-align: text-bottom;
   }
 
-  .category-apps {
-    //margin-left: 30px;
-  }
-
   ul {
     @include clearfix;
-
-    //border-bottom: 1px solid $light-drawing-colour;
-    //padding-bottom: 9px;
-
-    //border: 1px solid $light-drawing-colour;
-    //@include border-top-radius(6px);
-    //@include border-bottom-radius(6px);
-    //padding: 3px;
 
     li {
       float: left;
       width: 180px;
-
-//      a {
-//        width: 40px;
-//      }
 
       h6 {
         font-size: 14px;
@@ -159,11 +145,6 @@ h1 {
         width: 125px;
         margin-left: 45px;
       }
-
-//      a, h6 {
-//        display: inline-block;
-//        vertical-align: top;
-//      }
 
       a.img-wrapper {
         width: 40px;
@@ -177,7 +158,6 @@ h1 {
       }
 
       img {
-        //border: 1px solid white;
         @include border-top-radius(9px);
         @include border-bottom-radius(9px);
       }
@@ -223,8 +203,6 @@ h1 {
     float: left;
     margin-top: 2px;
     margin-right: 6px;
-
-    //border: 1px solid white;
     @include border-top-radius(12px);
     @include border-bottom-radius(12px);
   }
@@ -232,7 +210,7 @@ h1 {
 
 .rule {
   height: 2px;
-  border-top: 1px solid black; //darken($dark-background-colour, 10);
+  border-top: 1px solid black;
   border-bottom: 1px solid lighten($dark-background-colour, 30);
 }
 
@@ -261,13 +239,6 @@ h1 {
 
 .img-border {
   border: 1px solid $light-drawing-colour;
-  padding: 3px;
-}
-
-.control-border {
-  border: 1px solid $light-drawing-colour;
-  @include border-top-radius(6px);
-  @include border-bottom-radius(6px);
   padding: 3px;
 }
 
@@ -545,13 +516,11 @@ h1 {
 
     .more,
     .less {
-      display: block;
+      @include akin-basic-button;
       width: 100px;
-      margin: 12px auto 6px auto;
-      text-align: center;
-      border: 1px solid $light-drawing-colour;
-      @include border-top-radius(6px);
-      @include border-bottom-radius(6px);
+      @include centred-margins;
+      margin-top: 12px;
+      margin-bottom: 6px;
     }
 
     span:before {
@@ -571,7 +540,6 @@ h1 {
     margin: 0px 0px 12px 0px;
     padding: 6px;
     text-align: center;
-
     border-bottom: 1px solid lighten($main-spot-colour, 0);
     padding-bottom: 3px;
     text-align: left;
@@ -637,15 +605,5 @@ h1 {
       width: 240px;
       @include centred-margins;
     }
-  }
-}
-
-#search-results .disabled {
-  a, p, h4, em {
-    color: $disabled-text-colour!important;
-  }
-
-  img {
-    opacity: 0.4;
   }
 }
